Sun Oct  1 20:39:34 CEST 2006  Jochen Eisinger <coffee@silcnet.org>

	* Always return a valid username.  Affected file
	  lib/silcutil/unix/silcunixutil.c
	* Only wait for a nick on connecting, when it differs
	  (not counting case) from the username.  Affected file
	  apps/irssi/src/silc/core/client_ops.c

Sun Jul  2 19:12:36 CEST 2006  Jochen Eisinger <coffee@silcnet.org>

	* Make gmake the default for autodist, so I can properly work
	  on otaku.  Affected files README.DIST, distdir/autodist.conf

Fri Jan  6 13:08:15 CET 2006 Jochen Eisinger <coffee@silcnet.org>

	* Fixed more autodist issues.  Affected file doc/Makefile.ad,
	  apps/irssi/src/perl/Makefile.am, distdir/post-process-dist.

Thu Jan  5 20:02:31 CET 2006 Patrik Weiskircher <pat@icore.at>

	* make sure session->hostname and session->port are valid before the
	  application callback is done, since things will go wrong if the
	  application immediately calls silc_client_file_receive. Affected
	  file lib/silcclient/client_ftp.c.
	  Patch received from Stefan Siegel <stesie@brokenpipe.de>, thanks!

Wed Dec 14 19:21:42 CET 2005 Jochen Eisinger <coffee@silcnet.org> 

	* Fixed autodist configuration for silc-client.  Affected file
	  configure.ad
	* Honor user set hostname.  Also give the user a chance to
	  read the error message.  Affected file 
	  apps/irssi/src/silc/core/silc-core.c

Tue Nov 29 07:52:11 CET 2005 Patrik Weiskircher <pat@icore.at>

	* Fixed compile error on non-i386.  Affected file 
	  lib/silccrypt/sha256.c.

Mon Nov 21 19:18:15 EET 2005 Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_ATTRIBUTE_USER_ICON to lib/silccore/silcattrs.[ch].

Sun Nov 20 19:13:35 EET 2005 Pekka Riikonen <priikone@silcnet.org>

	* Removed callback system from SilcMimeAssembler.  Return
	  the multipart type in silc_mime_get_multiparts.  Affected
	  files are lib/silcutil/silcmime.[ch].

Sat Nov 19 17:34:51 EET 2005 Pekka Riikonen <priikone@silcnet.org>
